--- a/nosotros.html
+++ b/nosotros.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipo | Festival de Títeres</title>
 
-    <!-- <link rel="stylesheet" href="/css/style.css"> -->
-    <!-- <link rel="stylesheet" href="/css/css/bootstrap-grid.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
@@ -31,8 +29,6 @@
                     </div>
                     <div class="modal-footer">
                         <p>Pronto te respondemos, gracias por querer sumarte!</p>
-                    <!-- <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                    <button type="button" class="btn btn-primary">Guardar cambios</button> -->
                     </div>
                 </div>
             </div>
@@ -90,82 +86,50 @@
                 <img src="assets/img/Perfil-Omar.png" alt="Perfil de Omar Holz">
                 <h5>Omar Holz</h5>
                 <p>Organización</p>
-                <div>
-                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a> -->
-                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a> -->
-                </div>
             </article>
             <article>
                 <img src="assets/img/Perfil-Luisa.png" alt="Perfil de Luisa González">
                 <h5>Luisa González</h5>
                 <p>Organización</p>
-                <!-- <div>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-regular fa-envelope"></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
-                </div> -->
             </article>
             <article>
                 <img src="assets/img/Perfil-Naomi.png" alt="Perfil de Naomi Holz">
                 <h5>Naomi Holz</h5>
                 <p>Organización</p>
-                <div>
-                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a> -->
-                </div>
             </article>
             <article>
                 <img src="assets/img/Perfil-Roel-Coronel.png" alt="Perfil de Alejandro Rouel">
                 <h5>Alejandro Roel Coronel</h5>
                 <p>Organización</p>
-                <div>
-                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a> -->
-                </div>
             </article>
             <article>
                 <img src="assets/img/Perfil-Vane.png" alt="Perfil de Vanesa Reyes">
                 <h5>Vanesa Reyes</h5>
                 <p>Organización</p>
-                <div>
-                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a> -->
-                </div>
             </article>
             <article>
                 <img src="assets/img/Perfil-Julian.png" alt="Perfil de Julián Beck">
                 <h5>Julián Beck</h5>
                 <p>Iluminación</p>
-                <!-- <div>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
-                </div> -->
             </article>
             <article>
                 <img src="assets/img/Perfil-Cachu.png" alt="Perfil de Cachú">
                 <h5>Cachú</h5>
                 <p>Iluminación</p>
-                <!-- <div>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-square-facebook"></i></a>
-                </div> -->
             </article>
             <article>
                 <img src="assets/img/Perfil-Nahue.jpg" alt="Perfil de Nahuel Beck">
                 <h5>Nahuel Beck</h5>
                 <p>Diseño gráfico</p>
-                <div>
-                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a> -->
-                </div>
             </article>
             <article>
                 <img src="assets/img/Perfil-Zona-Norte.png" alt="Equipo Zona Norte">
                 <h5>Equipo Zona Norte</h5>
                 <p>Organización</p>
-                <div>
-                    <!-- <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></i></a>
-                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a> -->
-                </div>
+                <!-- <div>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-globe"></i></i></a>
+                    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+                </div> -->
             </article>
             <!-- Sumate -->
             <a href="/form-team.html" class="sumate-equipo" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModalCenter">
@@ -195,10 +159,6 @@
                 <img src="assets/img/2023-04-tata-vera-300x91.png" alt="Logo de Festival de Títeres Tatá Verá">
                 <p>Iguazú</p>
             </a>
-            <!-- <a href="https://www.facebook.com/festivaldetitereskruvikas/?locale=es_LA" target="_blank" rel="noopener noreferrer">
-                <img src="assets/img/2023-04-Kruvikas-300x237.png" alt="Festival de Títeres Kruvicas">
-                <p>Posadas</p>
-            </a> -->
         </div>
     </section>
 
@@ -207,8 +167,7 @@
             <div class="item-footer">
                 <div>
                     <p class="px-1">Estamos creciendo todos los años un poco más, <strong>escribinos</strong> si querés sumarte al festival.<br>
-                                                <a class="px-3 py-2" href="form-team.html"><i class="fa-regular fa-envelope px-1"></i>Comunicate</a>
-
+                        <a class="px-3 py-2" data-bs-toggle="modal" data-bs-target="#exampleModalCenter"><i class="fa-regular fa-envelope px-1"></i>Comunicate</a>
                     </p>
                 </div>
             </div>
