Se corrigen estilos

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <h2>Entradas</h2>
                         </div>
                         <div>
-                            <p>Estos son los precios del 2025, cuado selecciones una te redirijimos a whatsapp</p>
+                            <p>Cuando selecciones una opció te redirijimos a Whatsapp <i class="fa-brands fa-whatsapp px-1"></i></p>
                         </div>
                         <div class="section d-flex justify-content-center entradas-tickets flex-column">
                             <div class="d-flex justify-content-center">
