--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -318,8 +318,9 @@
                     </div>                    
                 </div>
             </div>
-            <div>
+            <div class="misiones-mobile">
                 <img src="assets/img/misiones-2025.svg" alt="Sedes del festival">
+                <img src="assets/img/misiones-solo.svg" alt="Sedes del festival">
             </div>
         </div>
     </section>
