Se corrigen aportes de equipo

--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
 
     <section id="inicio">
         <div class="d-flex justify-content-center flex-column">
-            <div class="d-flex justify-content-center">
-                <img src="/assets/img/marca-tata-piriri.png" alt="marca gráfica del Festival">
+            <div class="d-flex justify-content-center mb-5">
+                <img src="/assets/img/marca-tata-piriri-texto.png" alt="marca gráfica del Festival">
             </div>
             <div class="accion d-flex justify-content-center align-items-center flex-column">
                 <h2>Del 3 al 8 de Junio</h2>
@@ -114,11 +114,11 @@
             <div class="container">
                 <div class="justify-content-center">
                     <div class="col-12 text-center">
-                        <div class="d-flex justify-content-center align-items-center flex-column mb-4">
+                        <div class="d-flex justify-content-center align-items-center flex-column my-4">
                             <h2>Entradas</h2>
                         </div>
                         <div>
-                            <p>Cuando selecciones una opció te redirijimos a Whatsapp <i class="fa-brands fa-whatsapp px-1"></i></p>
+                            <p>Seleccioná tu entrada y te dirigimos a Whatsapp<i class="fa-brands fa-whatsapp px-1"></i>para terminar la compra.</p>
                         </div>
                         <div class="section d-flex justify-content-center entradas-tickets flex-column">
                             <div class="d-flex justify-content-center">
