--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -120,10 +120,12 @@
                             <img src="/assets/img/Histórias-do-Carlão-Lucas-Fialho.jpg" alt="Obra">
                         </div>
                         <div class="info-obras">
-                            <h6>Brasil | Gramado</h6>
                             <div class="numero-obra">
+                                <h6>Brasil | Gramado</h6>
+                                <p>Este grupo presenta varias obras <span>1</span></p>
+                            </div>
+                            <div>
                                 <h4>Histórias do Carlão</h4>
-                                <p><span>1°</span> Obra</p>
                             </div>
                             <div class="d-flex gap-1 align-items-center">
                                 <i class="fa-solid fa-star fa-xs"></i><h6>Bonecos da Montanha</h6>
@@ -137,10 +139,12 @@
                             <img src="/assets/img/A-Chuva-de-Moedas-de-5-Soles-Foto-Lucas-Fialho.jpg" alt="Obra">
                         </div>
                         <div class="info-obras">
-                            <h6>Brasil | Gramado</h6>
+                            <div class="numero-obra">
+                                <h6>Brasil | Gramado</h6>
+                                <p>Este grupo presenta varias obras <span>2</span></p>
+                            </div>
                             <div class="numero-obra">
                                 <h4>A chuva de moedas de 5 $oles</h4>
-                                <p><span>2°</span> Obra</p>
                             </div>
                             <div class="d-flex gap-1 align-items-center">
                                 <i class="fa-solid fa-star fa-xs"></i><h6>Bonecos da Montanha</h6>
@@ -154,10 +158,12 @@
                             <img src="/assets/img/AmericanaMente-Foto-Sergio-Azevedo.jpg" alt="Obra">
                         </div>
                         <div class="info-obras">
-                            <h6>Brasil | Gramado</h6>
                             <div class="numero-obra">
+                                <h6>Brasil | Gramado</h6>
+                                <p>Este grupo presenta varias obras <span>3</span></p>
+                            </div>
+                            <div>
                                 <h4>AmericanaMente</h4>
-                                <p><span>3°</span> Obra</p>
                             </div>
                             <div class="d-flex gap-1 align-items-center">
                                 <i class="fa-solid fa-star fa-xs"></i><h6>Bonecos da Montanha</h6>
@@ -261,6 +267,40 @@
                                 <i class="fa-solid fa-star fa-xs"></i><h6>Lupa, Compañía de muñecos</h6>
                             </div>
                             <p>Martino tiene ocho años, una mamá llena de música, un amigo invisible y un enojo más grande que la luna llena. Es que le acaban de dar una noticia: tiene que pasar las vacaciones en la casa de su papá. 1  Y eso es lo que lo enoja, porque su papá vive lejos, en una casa muy extraña y porque -aunque es su papá- lo conoce poquito. Pero -como pasa muchas veces- las cosas más emocionantes suceden en los lugares a donde no queremos ir. En medio de plantas exóticas y rodeado de personajes sorprendentes, Martino va a vivir una aventura que cambiará su vida para siempre. La obra tiene una novedosa y sorprendente propuesta que mezcla los títeres y la actuación de actores con animaciones multimedia. A través del humor, esta apasionante historia nos hace entender la importancia del trabajo con las emociones. Y fundamentalmente aquellas como la ira, que no se suelen tratar en los espectáculos pensados para las infancias.</p>
+                        </div>
+                    </article>
+
+                    <article>
+                        <div>
+                            <img src="/assets/img/Cacareando.jpg" alt="Obra">
+                        </div>
+                        <div class="info-obras">
+                            <div class="numero-obra">
+                                <h6>Argentina | Rosario</h6>
+                                <p>Este grupo presenta varias obras <span>1</span></p>
+                            </div>
+                            <h4>Cacareando</h4>
+                            <div class="d-flex gap-1 align-items-center">
+                                <i class="fa-solid fa-star fa-xs"></i><h6>La Hormiga</h6>
+                            </div>
+                            <p>En una chacra de nuestro campo, una gallina quiere poner un huevo y tener un pollito... Pero no es tan fácil. Carola y Felipe bailando zambas y chacareras, intervendrán en la historia. Junto con la ritera y los chicos buscarán la solución al problema. El gaucho Eusebio es el presentador de nuestra historia... La gallina se pone a empollar y pone... Un cubo! Qué cubo travieso... No se deja atrapar! Esta vez la gallina pone... Una flor! Felipe la riega para que crezca y se la regala a su amiga Carola... Ahora la gallina pone una pelota! Dos manos se convertirán en personajes de una historia sin palabras... En donde el mejor final será estar juntos y compartir. Felipe pide ayuda a la titiritera para conseguir otra flor, para regalarle a Carola, para que Carola le de más besos Carola se lleva la flor antes de tiempo! - Devolvéme la flor!! La flor es mía! Al encontrarse y explicar lo sucedido... Llega el tan esperado beso! Un gusanito trae este gran ZAPATO, para que la gallina lo use de nido. Pero tiene tanto olor a pata que los chicos lo soplan para que se vaya volando... De viaje... Hacemos entre todos un nido! Y la gallina puede tener a su pollito!</p>
+                        </div>
+                    </article>
+
+                    <article>
+                        <div>
+                            <img src="/assets/img/Estoy-aca.jpg" alt="Obra">
+                        </div>
+                        <div class="info-obras">
+                            <div class="numero-obra">
+                                <h6>Argentina | Rosario</h6>
+                                <p>Este grupo presenta varias obras <span>2</span></p>
+                            </div>
+                            <h4>Estoy acá</h4>
+                            <div class="d-flex gap-1 align-items-center">
+                                <i class="fa-solid fa-star fa-xs"></i><h6>La Hormiga</h6>
+                            </div>
+                            <p>Tenemos un sistema de vida instalado, que en algún momento pensamos que era bueno, era progreso... Como contraparte a este sistema de consumo que supuestamente nos ofrece confort, nos sentimos avasalladxs por el tiempo que no alcanza el individualismo y la violencia. Desde esta vida cotidiana, una mujer juega y se ve inmersa en su propio devenir... Hasta sentirse atrapada. Después de la crisis, el juego cambia, y le permite reconocerse de otro modo, sumergirse en un mundo sensible que la abraza y le propone otros caminos, otras construcciones.</p>
                         </div>
                     </article>
 
