--- a/nosotros.html
+++ b/nosotros.html
@@ -98,7 +98,7 @@
             </article>
             <article>
                 <img src="assets/img/Perfil-Roel-Coronel.png" alt="Perfil de Alejandro Rouel">
-                <h5>Alejandro Rouel Coronel</h5>
+                <h5>Rouel Alejandro Coronel</h5>
                 <p>Organización</p>
             </article>
             <article>
