Se agrega link de Contenidx en el footer

--- a/nosotros.html
+++ b/nosotros.html
@@ -176,7 +176,6 @@
                     <a class="px-1 mb-1" href="/nosotros.html">Quienes somos</a>
                     <a class="px-1 mb-1" href="/nosotros.html#otros-festivales">Más festivales</a>
                     <a class="px-1 mb-1" href="/index.html">Inicio</a>
-                    <p class="px-1 mb-1">Por el momento, las entradas virtuales las vendemos por Whatsapp.</p>
                 </div>
             </div>
         </div>
@@ -195,6 +194,9 @@
             <a class="prueba-gsap px-3 py-2" href="#top"><i class="fa-solid fa-angles-up px-1"></i></a>
         </div>
     </footer>
+    <div class="cx-web">
+        <i class="fa-regular fa-heart"></i><h6>Hecho con cariño por <a href="https://contenidx.com.ar/" target="_blank" rel="noopener noreferrer" style="font-weight: 800;">Contenidx</a></h6>
+    </div>
 
     <script src="https://unpkg.com/split-type"></script>
     <script type="module" src="./src/js/main.js"></script>
