--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -122,7 +122,7 @@
                         <div class="info-obras">
                             <div class="numero-obra">
                                 <h6>Brasil | Gramado</h6>
-                                <p>Este grupo presenta varias obras <span>1</span></p>
+                                <p>Este grupo presenta varias obras <span>1°</span></p>
                             </div>
                             <div>
                                 <h4>Histórias do Carlão</h4>
@@ -141,7 +141,7 @@
                         <div class="info-obras">
                             <div class="numero-obra">
                                 <h6>Brasil | Gramado</h6>
-                                <p>Este grupo presenta varias obras <span>2</span></p>
+                                <p>Este grupo presenta varias obras <span>2°</span></p>
                             </div>
                             <div class="numero-obra">
                                 <h4>A chuva de moedas de 5 $oles</h4>
@@ -160,7 +160,7 @@
                         <div class="info-obras">
                             <div class="numero-obra">
                                 <h6>Brasil | Gramado</h6>
-                                <p>Este grupo presenta varias obras <span>3</span></p>
+                                <p>Este grupo presenta varias obras <span>3°</span></p>
                             </div>
                             <div>
                                 <h4>AmericanaMente</h4>
@@ -277,7 +277,7 @@
                         <div class="info-obras">
                             <div class="numero-obra">
                                 <h6>Argentina | Rosario</h6>
-                                <p>Este grupo presenta varias obras <span>1</span></p>
+                                <p>Este grupo presenta varias obras <span>1°</span></p>
                             </div>
                             <h4>Cacareando</h4>
                             <div class="d-flex gap-1 align-items-center">
@@ -294,7 +294,7 @@
                         <div class="info-obras">
                             <div class="numero-obra">
                                 <h6>Argentina | Rosario</h6>
-                                <p>Este grupo presenta varias obras <span>2</span></p>
+                                <p>Este grupo presenta varias obras <span>2°</span></p>
                             </div>
                             <h4>Estoy acá</h4>
                             <div class="d-flex gap-1 align-items-center">
@@ -410,7 +410,6 @@
                     <a class="px-1 mb-1" href="/nosotros.html">Quienes somos</a>
                     <a class="px-1 mb-1" href="/nosotros.html#otros-festivales">Más festivales</a>
                     <a class="px-1 mb-1" href="/index.html">Inicio</a>
-                    <p class="px-1 mb-1">Por el momento, las entradas virtuales las vendemos por Whatsapp.</p>
                 </div>
             </div>
         </div>
@@ -429,6 +428,9 @@
             <a class="prueba-gsap px-3 py-2" href="#top"><i class="fa-solid fa-angles-up px-1"></i></a>
         </div>
     </footer>
+    <div class="cx-web">
+        <i class="fa-regular fa-heart"></i><h6>Hecho con cariño por <a href="https://contenidx.com.ar/" target="_blank" rel="noopener noreferrer" style="font-weight: 800;">Contenidx</a></h6>
+    </div>
 
     <script src="https://unpkg.com/split-type"></script>
     <script type="module" src="./src/js/main.js"></script>
