--- a/form.html
+++ b/form.html
@@ -181,6 +181,9 @@
             <a class="prueba-gsap px-3 py-2" href="#top"><i class="fa-solid fa-angles-up px-1"></i></a>
         </div>
     </footer>
+    <div class="cx-web">
+        <i class="fa-regular fa-heart"></i><h6>Hecho con cariño por <a href="https://contenidx.com.ar/" target="_blank" rel="noopener noreferrer" style="font-weight: 800;">Contenidx</a></h6>
+    </div>
 
     <script type="module" src="./src/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
