--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -134,7 +134,7 @@
                         </div>
                     </article>
 
-                    <article>
+                    <!-- <article>
                         <div>
                             <img src="/assets/img/A-Chuva-de-Moedas-de-5-Soles-Foto-Lucas-Fialho.jpg" alt="Obra">
                         </div>
@@ -151,7 +151,7 @@
                             </div>
                             <p>Inspirada no conto de Pepito Ron, esta montagem conta a história de uma vila peruana, situada numa montanha comum, onde a maior escassez era de água. A adaptação é encenada na vila, num dia comum, onde acompanhamos a conversa de dois moradores descendo a rua no lendário dia em que choveu moedas de 5 soles. Uma instigante adaptação brasileira que reúne em uma mesma obra duas linguagens das artes cênicas: o Teatro Narrativo (contação de histórias) e o Teatro de Objetos.</p>
                         </div>
-                    </article>
+                    </article> -->
 
                     <article>
                         <div>
@@ -160,7 +160,7 @@
                         <div class="info-obras">
                             <div class="numero-obra">
                                 <h6>Brasil | Gramado</h6>
-                                <p>Este grupo presenta varias obras <span>3°</span></p>
+                                <p>Este grupo presenta varias obras <span>2°</span></p>
                             </div>
                             <div>
                                 <h4>AmericanaMente</h4>
@@ -228,7 +228,7 @@
                         </div>
                     </article>
 
-                    <article>
+                    <!-- <article>
                         <div>
                             <img src="/assets/img/SAKADOS-AL-NATURAL.jpg" alt="Obra">
                         </div>
@@ -240,7 +240,7 @@
                             </div>
                             <p>Serie de escenas disparatadas que ocurren en misiones respecto de su fauna salvaje y su fauna urbana local y visitante... títeres realizados reutilizando envases plásticos de descarte cotidiano.</p>
                         </div>
-                    </article>
+                    </article> -->
 
                     <article>
                         <div>
