--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festival de Títeres</title>
+    <link rel="canonical" href="https://tatapiriri.com.ar/pagina-principal">
 </head>
 <body>
 
