--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obras y Sedes | Festival de Títeres</title>
-
+    <link rel="canonical" href="https://tatapiriri.com.ar/obras-y-sedes#obras">
 </head>
 <body id="obras-y-sedes">
 
