--- a/index.html
+++ b/index.html
@@ -87,12 +87,13 @@
     </section>
 
     <section id="info-programacion">
-        <h2>Programación</h2>
-        <div class="controls">
-            <div id="allDaysContainer"></div>
-        <div id="errorMessage" class="hidden"></div>
-            
-        </div>
+        <div class="container">
+            <h1>Programación</h1>
+            <div class="slider-container">
+              <div id="allDaysContainer"></div>
+              <div id="errorMessage" class="hidden"></div>
+            </div>
+          </div>
         
     </section>
 
