--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
                 <h2>Del 3 al 7 de Junio</h2>
                 <h2 id="edicion">2025</h2>
                 <div class="btn-accion">
-                    <a href="#info-programacion" id="programacion">
+                    <a href="obras-y-sedes.html" id="programacion">
                         <span class="text">¿Quiénes vienen?</span>
-                        <span>Ver Programación</span>
+                        <span>Ver Obras</span>
                     </a>
                     <div id="entrada">
                         <i class="fa-regular fa-note-sticky px-3"></i>
@@ -99,7 +99,7 @@
     <section id="int">
         <div class="d-flex align-items-center justify-content-center">
             <h4 class="px-1">Apoyan este festival</h4>
-            <img class="px-1 my-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
+            <!-- <img class="px-1 my-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro"> -->
             <img class="px-1 my-1" src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Marca del Instituto Nacional del Teatro">
         </div>
     </section>
@@ -173,6 +173,19 @@
         </div>
     </section>
 
+    <section id="quienes-colaboramos">
+        <h2>Agradecemos la colaboración de </h2>
+        <div class="colaboradores">
+            <img src="/public/assets/img/sponsor/croquio_01.jpg" alt="">
+            <!-- <img src="/public/assets/img/sponsor/croquio_01.jpg" alt="">
+            <img src="/public/assets/img/sponsor/croquio_01.jpg" alt="">
+            <img src="/public/assets/img/sponsor/croquio_01.jpg" alt=""> -->
+        </div>
+        <div>
+            <p>Si querés sumarte como colaborador, podés comunicarte con nosotros</p>
+        </div>
+    </section>
+
     <section id="info-sedes">
         <!-- <h1>Sedes</h1> -->
         <h5 id="card-horizontal-mobile">Estiramos los brazos para llegar bien lejos!</h5>
@@ -212,9 +225,9 @@
                     Este festival cuenta con el apoyo del
                 </p>
                 <div class="logos-footer">
-                    <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
+                    <!-- <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
                         <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
-                    </a>
+                    </a> -->
                     <img src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Logo de Municipalidad de Eldorado">
                 </div>
             </div>
