Se agragan Sponsors

--- a/index.html
+++ b/index.html
@@ -175,13 +175,25 @@
 
     <section id="quienes-colaboramos">
         <h2>Agradecemos la colaboración de </h2>
-        <div class="colaboradores">
-            <img src="/public/assets/img/sponsor/croquio_01.jpg" alt="">
-            <!-- <img src="/public/assets/img/sponsor/croquio_01.jpg" alt="">
-            <img src="/public/assets/img/sponsor/croquio_01.jpg" alt="">
-            <img src="/public/assets/img/sponsor/croquio_01.jpg" alt=""> -->
+        <div class="colaboradores pt-5">
+            <img src="/public/assets/img/sponsor/Cultura.svg" alt="">
+            <img src="/public/assets/img/sponsor/IPTI.svg" alt="">
+            <img src="/public/assets/img/sponsor/Mun-Eldorado.svg" alt="">
+            <img src="/public/assets/img/sponsor/Mun-Montecarlo.svg" alt="">
+            <img src="/public/assets/img/sponsor/Mun-PE.svg" alt="">
+            <img src="/public/assets/img/sponsor/Mun-Wanda.svg" alt="">
+            <img src="/public/assets/img/sponsor/Mun-Libertad.svg" alt="">
+            <img src="/public/assets/img/sponsor/Mun-PR.svg" alt="">
+            <img src="/public/assets/img/sponsor/canal-9.svg" alt="">
+            <img src="/public/assets/img/sponsor/canal-4.svg" alt="">
+            <img src="/public/assets/img/sponsor/genesis.svg" alt="">
+            <img src="/public/assets/img/sponsor/circulo-medioco.svg" alt="">
+            <img src="/public/assets/img/sponsor/Crucero.svg" alt="">
+            <img src="/public/assets/img/sponsor/Croquio.svg" alt="">
+            <img src="/public/assets/img/sponsor/Espacio-Base.svg" alt="">
+            <img src="/public/assets/img/sponsor/etce-horianski.svg" alt="">
         </div>
-        <div>
+        <div class="pt-5">
             <p>Si querés sumarte como colaborador, podés comunicarte con nosotros</p>
         </div>
     </section>
