--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
     </section>
 
-    <section id="quienes-colaboramos">
+    <!-- <section id="quienes-colaboramos">
         <h2>Agradecemos la colaboración de </h2>
         <div class="colaboradores pt-5">
             <img src="/public/assets/img/sponsor/Cultura.svg" alt="">
@@ -196,7 +196,7 @@
         <div class="pt-5">
             <p>Si querés sumarte como colaborador, podés comunicarte con nosotros</p>
         </div>
-    </section>
+    </section> -->
 
     <section id="info-sedes">
         <!-- <h1>Sedes</h1> -->
