--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 
     <section id="info-programacion">
         <h2>Programación</h2>
-        <div class="controls">
+      <!-- <div class="controls"> -->
             <div id="allDaysContainer"></div>
             <div id="errorMessage" class="hidden"></div>
         </div>
