--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festival de Títeres</title>
     <link rel="canonical" href="https://tatapiriri.com.ar/pagina-principal">
+    <script type="module" src="./src/js/programacion.js" defer></script>
 </head>
 <body>
 
@@ -106,7 +107,7 @@
 
     <section id="info-programacion">
         <h2>Programación</h2>
-      <!-- <div class="controls"> -->
+       <div class="controls">
             <div id="allDaysContainer"></div>
             <div id="errorMessage" class="hidden"></div>
         </div>
@@ -252,7 +253,7 @@
 
 
     <script type="module" src="./src/js/main.js"></script>
-    <script type="module" src="./src/js/programacion.js"></script>
+    <!-- <script type="module" src="./src/js/programacion.js"></script> -->
 
 </body>
 </html>
