Se corrigen errores de API en estilos

--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -419,9 +419,9 @@
                     Este festival cuenta con el apoyo del
                 </p>
                 <div class="d-flex gap-1">
-                    <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
+                    <!-- <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
                         <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
-                    </a>
+                    </a> -->
                     <img src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Logo de Municipalidad de Eldorado">
                 </div>
             </div>
@@ -434,6 +434,7 @@
 
     <script src="https://unpkg.com/split-type"></script>
     <script type="module" src="./src/js/main.js"></script>
+    <script type="module" src="./src/js/obras-y-sedes-sroll-slider.js"></script>
     
 </body>
 </html>
