--- a/form.html
+++ b/form.html
@@ -172,9 +172,9 @@
                     Este festival cuenta con el apoyo del
                 </p>
                 <div class="d-flex gap-1">
-                    <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
+                    <!-- <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
                         <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
-                    </a>
+                    </a> -->
                     <img src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Logo de Municipalidad de Eldorado">
                 </div>
             </div>
@@ -186,6 +186,8 @@
     </div>
 
     <script type="module" src="./src/js/main.js"></script>
+    <script type="module" src="./src/js/form-file-upload.js"></script>
+    <script type="module" src="./src/js/form-logic.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/emailjs-com@3/dist/email.min.js"></script>
 
 </body>
