--- a/nosotros.html
+++ b/nosotros.html
@@ -185,9 +185,9 @@
                     Este festival cuenta con el apoyo del
                 </p>
                 <div class="d-flex gap-1">
-                    <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
+                    <!-- <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
                         <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
-                    </a>
+                    </a> -->
                     <img src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Logo de Municipalidad de Eldorado">
                 </div>
             </div>
