--- a/index.html
+++ b/index.html
@@ -100,8 +100,7 @@
     <section id="int">
         <div class="d-flex align-items-center justify-content-center">
             <h4 class="px-1">Apoyan este festival</h4>
-            <!-- <img class="px-1 my-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro"> -->
-            <img class="px-1 my-1" src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Marca del Instituto Nacional del Teatro">
+            <img class="px-1 my-1" src="/assets/img/sponsor/Mun-Eldorado-Completo.svg" alt="Marca de la Municipalidad de Eldorado">
         </div>
     </section>
 
@@ -179,7 +178,7 @@
         <div class="colaboradores pt-5">
             <img src="/public/assets/img/sponsor/Cultura.svg" alt="">
             <img src="/public/assets/img/sponsor/IPTI.svg" alt="">
-            <img src="/public/assets/img/sponsor/Mun-Eldorado.svg" alt="">
+            <img src="/public/assets/img/sponsor/Mun-Eldorado-Completo.svg" alt="">
             <img src="/public/assets/img/sponsor/Mun-Montecarlo.svg" alt="">
             <img src="/public/assets/img/sponsor/Mun-PE.svg" alt="">
             <img src="/public/assets/img/sponsor/Mun-Wanda.svg" alt="">
@@ -193,6 +192,7 @@
             <img src="/public/assets/img/sponsor/Croquio.svg" alt="">
             <img src="/public/assets/img/sponsor/Espacio-Base.svg" alt="">
             <img src="/public/assets/img/sponsor/etce-horianski.svg" alt="">
+            <img src="/public/assets/img/sponsor/duomo.svg" alt="">
         </div>
         <div class="pt-5">
             <p>Si querés sumarte como colaborador, podés comunicarte con nosotros</p>
@@ -238,10 +238,7 @@
                     Este festival cuenta con el apoyo del
                 </p>
                 <div class="logos-footer">
-                    <!-- <a href="https://inteatro.ar/" target="_blank" rel="noopener noreferrer">
-                        <img class="px-1" src="/assets/img/logo-int-blanco.svg" alt="Marca del Instituto Nacional del Teatro">
-                    </a> -->
-                    <img src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Logo de Municipalidad de Eldorado">
+                    <img src="/assets/img/sponsor/Mun-Eldorado-Completo.svg" alt="Logo de Municipalidad de Eldorado">
                 </div>
             </div>
             <a class="prueba-gsap px-3 py-2" href="#top"><i class="fa-solid fa-angles-up px-1"></i></a>
