Correcciones en sponsor Muni Eldorado

--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
     <section id="int">
         <div class="d-flex align-items-center justify-content-center">
             <h4 class="px-1">Apoyan este festival</h4>
-            <img class="px-1 my-1" src="/assets/img/sponsor/Mun-Eldorado-Completo.svg" alt="Marca de la Municipalidad de Eldorado">
+            <img class="px-1 my-1" src="/assets/img/2023-04-Recurso-31-Muni-Eldo.png" alt="Marca de la Municipalidad de Eldorado">
+            <img class="px-1 my-1" src="/assets/img/sponsor/Mun-Eldo-Avancemos.svg" alt="Marca de la Municipalidad de Eldorado">
         </div>
     </section>
 
