--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -347,20 +347,16 @@
                             <h4>Puerto Esperanza</h4>
                             <!-- <p>Av. Tatatata 1234</p> -->
                         </article>
-                        <article class="">
+                        <!-- <article class="">
                             <h4>Garuhapé</h4>
-                            <!-- <p>Av. Tatatata 1234</p> -->
-                        </article>
-                        <article class="">
-                            <h4>Montecarlo</h4>
-                            <!-- <p>Av. Tatatata 1234</p> -->
-                        </article>
+                            <p>Av. Tatatata 1234</p>
+                        </article> -->
                     </div>                    
                 </div>
             </div>
             <div class="misiones-mobile">
                 <img src="assets/img/misiones-2025.svg" alt="Sedes del festival">
-                <img src="assets/img/misiones-solo.svg" alt="Sedes del festival">
+                <!-- <img src="assets/img/misiones-2025.svg" alt="Sedes del festival"> -->
             </div>
         </div>
     </section>
