--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
             <img src="/public/assets/img/sponsor/Mun-PE.svg" alt="">
             <img src="/public/assets/img/sponsor/Mun-Wanda.svg" alt="">
             <img src="/public/assets/img/sponsor/Mun-Libertad.svg" alt="">
-            <img src="/public/assets/img/sponsor/Mun-PR.svg" alt="">
+            <!-- <img src="/public/assets/img/sponsor/Mun-PR.svg" alt=""> -->
             <img src="/public/assets/img/sponsor/canal-9.svg" alt="">
             <img src="/public/assets/img/sponsor/canal-4.svg" alt="">
             <img src="/public/assets/img/sponsor/genesis.svg" alt="">
