Se agregan elementos varios
Imagen de Vicky, Attem, favicon

--- a/nosotros.html
+++ b/nosotros.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Equipo | Festival de Títeres</title>
     <link rel="canonical" href="https://tatapiriri.com.ar/nosotros">
+    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
 
 </head>
 <body>
@@ -121,6 +122,11 @@
                 <img src="assets/img/Perfil-Nahue.jpg" alt="Perfil de Nahuel Beck">
                 <h5>Nahuel Beck</h5>
                 <p>Diseño gráfico</p>
+            </article>
+            <article>
+                <img src="assets/img/Perfil-Victoria.jpg" alt="Perfil de Nahuel Beck">
+                <h5>Victoria Segovia</h5>
+                <p>Comunicación</p>
             </article>
             <article>
                 <img src="assets/img/Perfil-Zona-Norte.png" alt="Equipo Zona Norte">
