--- a/obras-y-sedes.html
+++ b/obras-y-sedes.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Obras y Sedes | Festival de Títeres</title>
     <link rel="canonical" href="https://tatapiriri.com.ar/obras-y-sedes#obras">
+    <link rel="shortcut icon" href="/assets/img/favicon.svg" type="image/x-icon">
 </head>
 <body id="obras-y-sedes">
 
