--- a/form.html
+++ b/form.html
@@ -91,7 +91,7 @@
                         <p>Este formulario es para la edición del 2026.</p>
                     </div>
                 </div>
-                <form name="contact">
+                <form id="form" name="contact">
                 <p>
                     Referentes
                     <label>
